# tutor-contrib-enterprise

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci-lint.yml  plugin-test.yml
requirements/: base.in  base.txt  constraints.txt  dev.in  dev.txt  pip-tools.txt
tutorenterprise/: plugin.py
tutorenterprise/patches/: caddyfile  ecommerce-settings-common  ecommerce-settings-development  k8s-deployments  k8s-jobs  k8s-services  kustomization-configmapgenerator  kustomization-resources  local-docker-compose-caddy-aliases  local-docker-compose-jobs-services  local-docker-compose-services  openedx-lms-common-settings  openedx-lms-development-settings
tutorenterprise/templates/enterprise/apps/enterprise-catalog/settings/: development.py  production.py
tutorenterprise/templates/enterprise/apps/enterprise-catalog/settings/partials/: common.py
tutorenterprise/templates/enterprise/jobs/discovery/: init
tutorenterprise/templates/enterprise/jobs/ecommerce/: init
tutorenterprise/templates/enterprise/jobs/enterprise-catalog/: init  update_content_metadata
tutorenterprise/templates/enterprise/jobs/lms/: init  migrate_catalogs
tutorenterprise/templates/enterprise/jobs/mysql/: init
tutorenterprise/templates/enterprise/k8s/: hpa.yml
